<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/beerItem">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/beerImageView"
        android:src="@drawable/ic_no_img"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="#ffffff"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/foundBeerName"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/beerName"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beer_tagline"
            android:id="@+id/beerTagline"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/beerDesc"
            android:layout_width="289dp"
            android:layout_height="32dp"
            android:text="@string/beerdescription"
            android:textColor="@color/black" />
    </LinearLayout>
</LinearLayout>